[gd_scene load_steps=4 format=3 uid="uid://b6l1qhsug81j5"]

[ext_resource type="Script" path="res://prog_82a.gd" id="1_1d2f7"]

[sub_resource type="LabelSettings" id="LabelSettings_hyvhe"]
font_size = 32

[sub_resource type="Theme" id="Theme_60bfv"]
default_font_size = 32

[node name="prog_82a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1d2f7")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 370.0
offset_bottom = 109.0
text = "Enter the speed limit:"
label_settings = SubResource("LabelSettings_hyvhe")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_top = 144.0
offset_right = 370.0
offset_bottom = 253.0
text = "Enter the vehicle speed:"
label_settings = SubResource("LabelSettings_hyvhe")
horizontal_alignment = 2
vertical_alignment = 1

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_top = 277.0
offset_right = 1152.0
offset_bottom = 470.0
label_settings = SubResource("LabelSettings_hyvhe")
vertical_alignment = 1

[node name="txtLimit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 396.0
offset_right = 767.0
offset_bottom = 109.0

[node name="txtSpeed" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 396.0
offset_top = 144.0
offset_right = 767.0
offset_bottom = 253.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_top = 519.0
offset_right = 287.0
offset_bottom = 646.0
theme = SubResource("Theme_60bfv")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 446.0
offset_top = 519.0
offset_right = 733.0
offset_bottom = 646.0
theme = SubResource("Theme_60bfv")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 870.0
offset_top = 519.0
offset_right = 1157.0
offset_bottom = 646.0
theme = SubResource("Theme_60bfv")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
